--- a/烧烤备忘录.md
+++ b/烧烤备忘录.md
@@ -8,21 +8,21 @@
 
 ## 辅助工具（大佬家中如果有，可以提出，自带）
 
-- [ ] 锡纸
+- [x] 锡纸（佳佳）
 
 - [ ] 竹签
 
 - [ ] 毛刷
 
-- [ ] 水果刀
+- [x] 水果刀（国真）
 
-- [ ] 砧板
+- [x] 砧板（国真）
 
 - [ ] 一次性碗筷
 
 - [ ] 纸杯
 
-- [ ] 纸巾
+- [x] 纸巾（金）
 
 - [ ] 夹子
 
@@ -34,12 +34,13 @@
 
 ## 调料
 
-- [ ] 孜然
+- [x] 孜然（佳佳）
 - [ ] 食物油
-- [ ] 盐
+- [x] 盐（国真）
 - [ ] 老干妈
 - [ ] 烤肉酱，番茄酱等。。
-- [ ] 姜，葱等
+- [x] 姜，葱等（佳佳）
+- [x] 酱油（佳佳）
 
 
 
